--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,11 @@
-baseURL: "https://adityatelange.github.io/hugo-PaperMod/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
+baseURL: "https://nzaba.github.io/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 title: Ray 
 paginate: 5
-theme: PaperMod
+module:
+  imports:
+  - path: github.com/adityatelange/hugo-PaperMod
+theme: hugo-PaperMod
+
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
