--- a/config.yml
+++ b/config.yml
@@ -76,13 +76,10 @@ params:
     homeInfoParams:
         Title: <h2>About<h2>
         Content: >
-            - Hi there! Welcome to my personal webpage where I share some of the things I’ve made including technical details, some inspiration and the process. 
+            - Hi there! Welcome to my personal webpage where I share some of the things I’ve made including technical details, some inspiration and the process. I believe that creativity and research are essential for solving the world's most pressing problems. I am passionate about using my skills to think outside the box and to come up with new ideas that can make a difference. 
             <br><br>
 
-            - With focused training in Statistics and a heart for global change, I am driven by a desire to improve how science is done. I believe that creativity and research are essential for solving the world's most pressing problems. I am passionate about using my skills to think outside the box and to come up with new ideas that can make a difference. 
-            <br><br>
-
-            - **Skills and Interests**: Reproducible Research, Statistics, Product Development, Version Control, Deep Learning, Global Health
+            - **Skills and Interests**: Reproducible Research, Statistics, Product Development, Version Control, Deep Learning, Public Health
     socialIcons:
         - name: email
           url: "mailto:hi@raynzaba.com"
