--- a/config.yml
+++ b/config.yml
@@ -42,8 +42,8 @@ outputs:
 
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
-    author: Theme PaperMod
+    description: "Blog"
+    author: Ray
     # author: ["Me", "You"] # multiple authors
 
     defaultTheme: auto
@@ -91,8 +91,8 @@ params:
           url: "https://www.researchgate.net/profile/Raymond-Saitoti"
 
     editPost:
-        URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-        Text: "Suggest Changes" # edit text
+        URL: ""
+        Text: "" # edit text
         appendFilePath: true # to append file path to Edit link
 
     # label:
