Revert "yml update"
This reverts commit 5eb02a1019967f40c58d27e5b4b7c38542113ede.

--- a/config.yml
+++ b/config.yml
@@ -79,7 +79,7 @@ params:
             - Hi there! Welcome to my personal webpage where I share some of the things I’ve made including technical details, some inspiration and the process. I believe that creativity and research are essential for solving the world's most pressing problems. I am passionate about using my skills to think outside the box and to come up with new ideas that can make a difference. 
             <br><br>
 
-            - **Skills and Interests**: Reproducible Research, Statistics, Product Development, Version Control, Deep Learning
+            - **Skills and Interests**: Reproducible Research, Statistics, Product Development, Version Control, Deep Learning, Public Health
     socialIcons:
         - name: email
           url: "mailto:hi@raynzaba.com"
